--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # Gitlab CI 
 # Build and Test pipeline for Python
 
-image: "python:latest"
+image: "python:3.7"
 
 before_script:
   - python --version
