--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-matplotlib==3.3.4
-numpy==1.20.1
-pandas==1.2.3
-scikit_learn==1.0.2
-seaborn==0.11.1
+matplotlib
+numpy
+pandas
+scikit_learn
+seaborn
 pylint
+statsmodels
